Incorporated t2b profile into maven pom.